<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrar">

    <Spinner
        android:id="@+id/type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="164dp"
        android:entries="@array/user_type"
        android:hint="@string/type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_confirmarPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="164dp"
        android:ems="10"
        android:hint="Confirmar contraseña"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <EditText
        android:id="@+id/txt_Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="164dp"
        android:ems="10"
        android:hint="@string/txt_Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Usuario" />

    <EditText
        android:id="@+id/txt_FirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/txt_FirstName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_LastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type" />

    <EditText
        android:id="@+id/txt_LastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="164dp"
        android:ems="10"
        android:hint="@string/txt_LastName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_FirstName" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="164dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Email"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/ButtonRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="56dp"
        android:onClick="RegistrarButton"
        android:text="@string/ButtonRegistration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Femenino"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txt_Usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="163dp"
        android:ems="10"
        android:hint="Usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_LastName" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="485dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="10dp"
        android:text="Genero: "
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_confirmarPassword"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/Femenino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="Femenino"
        app:layout_constraintEnd_toStartOf="@+id/Masculino"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/txt_confirmarPassword"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/Masculino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="110dp"
        android:text="Masculino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Femenino"
        app:layout_constraintTop_toBottomOf="@+id/txt_confirmarPassword"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>